Changes from jTDS 0.8-rc1
=========================

03/30/2004 - Alin Sinpalean
 o Silently updated the JUnit and Ant jars in the 0.8-rc1 source packet.
 o Moved the Savepoint-related methods from TdsConnection into a new class,
   TdsConnectionJDBC3. Now new Connections are dynamically created from one of
   the two classes depending on the Java specification version of the JVM.
 o Added some more old date tests, still haven't been able to reproduce anything
   on my machine.
 o Added patch #926168 (add some meta-info to jar manifest) submitted by Fedor
   Karpelevitch.
 o Updated the connection.properties template to include the user property.

03/28/2004 - Brian Heineman
 o Implemented Savepoint support.
 o Updated DatabaseMetaData.supportsSavepoints() to return true.
 o Implemented DatabaseMetaData.supportsMultipleOpenResults(); returns true.
 o Implemented DatabaseMetaData.supportsNamedParameters(); currently returns
   false.
 o Implemented DatabaseMetaData.supportsStatementPooling(); currently returns
   false.

03/27/2004 - Brian Heineman
 o Added test to demonstrate bug [924030] EscapeProcesser problem with "{}"
   brackets

===============================================================================
03/30/2004 - jTDS 0.8-rc1 released
===============================================================================

Changes from jTDS 0.7.1
========================

03/29/2004 - Alin Sinpalean
 o jTDS is now licensed under the LGPL. This means that noone will be able to
   sell jTDS or any derivatives and that any modifications to it must be made
   public. This decision has been discussed and approved in the jTDS developer
   forum.
 o Updated the documentation and README to reflect the license change.
 o Changed the "Project Home" link to "Project Info" to avoid confusion and
   reordered the links, placing the local ones first.

03/28/2004 - Alin Sinpalean
 o Compiled (a lot of) new documentation.